<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kryptapps.konel.yahooweather.LauncherActivity"
    android:background="@color/primary">

    <EditText
        android:id="@+id/etCity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/et_city"
        android:gravity="center" />

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:layout_below="@+id/etCity"
        android:layout_centerHorizontal="true"
        android:background="@color/primary_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/disclaimer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
